--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Privacy Policy</title>
+</head>
+<body>
+
 <h1>Privacy Policy</h1>
 <p>Last updated: July 26, 2022</p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
@@ -130,3 +137,6 @@
 <li>By email: jasonyeung.mf@gmail.com</li>
 </ul>
 
+
+</body>
+</html>
